# cookiecutter-python-rust-maturin

./: Cargo.toml  Dockerfile  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: CI.yml
env/Scripts/: activate  activate.bat
python/rustpytemplate/: __init__.py  app.py
python/rustpytemplate/observer/: __init__.py
python/rustpytemplate/utils/: __init__.py  fake.py
python/{{cookiecutter.package_name}}/: __init__.py
python/{{cookiecutter.project_slug}}/: .gitignore  app.py  tox.ini
python/{{cookiecutter.project_slug}}/src/: lib.rs
python/{{cookiecutter.project_slug}}/utils/: __init__.py  fake.py
python/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/schemas/: __init__.py
src/: lib.rs
test/: test_app.py
test/test_observer/: test_tracker.py
test/test_utils/: test_fake.py
testpyrust/: Cargo.toml  pyproject.toml
testpyrust/python/testpyrust/: __init__.py  app.py
testpyrust/python/testpyrust/utils/: fake.py
testpyrust/src/: lib.rs
{{cookiecutter.project_slug}}/: README.md  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/python/{{cookiecutter.project_slug}}/: __init__.py  app.py
{{cookiecutter.project_slug}}/python/{{cookiecutter.project_slug}}/observer/: __init__.py  tracker.py
{{cookiecutter.project_slug}}/python/{{cookiecutter.project_slug}}/schemas/: __init__.py  model.py
{{cookiecutter.project_slug}}/test/: test_app.py
{{cookiecutter.project_slug}}/test/test_observer/: test_tracker.py
{{cookiecutter.project_slug}}/test/test_schemas/: test_model.py
{{cookiecutter.project_slug}}/test/test_utils/: test_fake.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: app.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/schemas/: model.py
