[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "{{cookiecutter.package_name}}"
requires-python = ">3.7"
dependencies = [
    "fastapi>=0.103.0,<0.104.0",
    "uvicorn>=0.23.2,<0.24.0"
    ]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
micro-launch = "{{cookiecutter.package_name}}:app.main"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
